--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
     "ngx-pagination": "^5.0.0",
-    "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^10.16.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
